k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hotel-frontend
  template:
    metadata:
      labels:
        app: hotel-frontend
    spec:
      containers:
      - name: hotel-frontend
        image: Sunithriyansh/hotel-frontend:latest
        ports:
        - containerPort: 80
